--- a/404.html
+++ b/404.html
@@ -1,25 +1,36 @@
 ---
+layout: null
+title: 404
 permalink: /404.html
-layout: default
 ---
 
-<style type="text/css" media="screen">
-  .container {
-    margin: 10px auto;
-    max-width: 600px;
-    text-align: center;
-  }
-  h1 {
-    margin: 30px 0;
-    font-size: 4em;
-    line-height: 1;
-    letter-spacing: -1px;
-  }
-</style>
 
-<div class="container">
-  <h1>404</h1>
+<!DOCTYPE html>
 
-  <p><strong>Page not found :(</strong></p>
-  <p>The requested page could not be found.</p>
-</div>
+<html>
+
+<head>
+	<meta charset="utf-8">
+	<meta http-equiv="X-UA-Compatible" content="IE=edge">
+	<meta name="viewport" content="width=device-width, initial-scale=1">
+	<meta name="description" content="{% if page.excerpt %}{{ page.excerpt | strip_html | strip_newlines | truncate: 160 }}{% else %}{{ site.description }}{% endif %}">
+
+	<link rel="stylesheet" href="{{ "{{ site.url }}/assets/css/main.css" | prepend: site.baseurl }}">
+</head>
+
+<body>
+	<div class="error-wrapper">
+		<div class="error-content text-center">
+			<h1 class="white-title">404</h1>
+			<div class="error-desc">Oops!!! The page was not found.</div>
+		</div>
+		<nav class="text-center">
+			<a href="/">Home</a>
+			<a href="/blog">Blog</a>
+		</nav>
+	</div>
+   
+
+</body>
+
+</html>
